# open_deep_cartograph

./: .gitignore  README.md  environment_detailed.yml  environment_develop.yml  environment_production.yml  requirements.txt  setup.cfg  setup.py
deep_cartograph/: README.md  default_config.yml  run.py
deep_cartograph/data/: .gitignore  README.md
deep_cartograph/log_config/: debug_configuration.ini  info_configuration.ini
deep_cartograph/modules/: README.md
deep_cartograph/modules/common/: common.py
deep_cartograph/modules/figures/: figures.py
deep_cartograph/modules/md/: md.py
deep_cartograph/modules/plumed/: __init__.py  cli.py  colvars.py  command.py  utils.py
deep_cartograph/modules/statistics/: dip_test.py  entropy.py  standard_deviation.py  statistics.py
deep_cartograph/tests/: run_tests.sl  test_compute_features.py  test_deep_cartograph.py  test_filter_features.py  test_train_colvars.py
deep_cartograph/tools/: README.md  __init__.py
deep_cartograph/tools/analyze_geometry/: __init__.py  analyze_geometry.py  default_config.yml
deep_cartograph/tools/compute_features/: __init__.py  compute_features.py  default_config.yml
deep_cartograph/tools/filter_features/: __init__.py  default_config.yml  filter_features.py  filtering.py
deep_cartograph/tools/train_colvars/: __init__.py  cv_calculator.py  default_config.yml  train_colvars.py  train_colvars_workflow.py
deep_cartograph/yaml_schemas/: __init__.py  analyze_geometry.py  compute_features.py  deep_cartograph.py  filter_features.py  train_colvars.py
examples/command_line/example_1/: config.yml  (+2 more)
(+66 files in other folders)
