[metadata]
name = deep_cartograph
version = 0.1
author = PabloNavarro
author_email = p.navarro.acero@gmail.com
description = A package to train and use machine learning models to calculate collective variables
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PabloNA97/deep_cartograph
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt